--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "employee_tracker",
   "version": "1.0.0",
-  "description": "This is a logo generator to that allows the user to input criteria that will generate a logo upon results given from the prompts proposed. With the use of jest, inquirer, and validate-color installed, the code was able to be tested and written to a file to generate a SVG logo.",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "index.js",
@@ -17,6 +17,7 @@
     "jest": "^29.6.4",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
+    "node": "^20.5.1",
     "sequelize": "^6.32.1"
   }
 }
