--- a/package.json
+++ b/package.json
@@ -12,13 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "ascii-art": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "ascii-art-font": "^1.0.2",
     "inquirer": "^8.2.4",
-    "jest": "^29.6.4",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.6.0",
-    "node": "^20.5.1",
-    "sequelize": "^6.32.1"
+    "mysql2": "^3.6.0"
   }
 }
