--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "employee_tracker",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "index.js",
-    "test": "jest"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
