--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +14,6 @@
     "ascii-art-font": "^1.0.2",
     "dotenv": "^16.3.1",
     "inquirer": "^8.2.4",
-    "mysql2": "^3.6.0",
-    "nodemon": "^3.0.1"
+    "mysql2": "^3.6.0"
   }
 }
